; ModuleID = '/home/carl/AnghaBench/htop/extr_FunctionBar.c_FunctionBar_newEnterEsc.c'
source_filename = "/home/carl/AnghaBench/htop/extr_FunctionBar.c_FunctionBar_newEnterEsc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FunctionBar_EnterEscKeys = common dso_local global i32 0, align 4
@FunctionBar_EnterEscEvents = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @FunctionBar_newEnterEsc(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca [3 x i8*], align 16
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = getelementptr inbounds [3 x i8*], [3 x i8*]* %5, i64 0, i64 0
  %7 = load i8*, i8** %3, align 8
  store i8* %7, i8** %6, align 8
  %8 = getelementptr inbounds i8*, i8** %6, i64 1
  %9 = load i8*, i8** %4, align 8
  store i8* %9, i8** %8, align 8
  %10 = getelementptr inbounds i8*, i8** %8, i64 1
  store i8* null, i8** %10, align 8
  %11 = getelementptr inbounds [3 x i8*], [3 x i8*]* %5, i64 0, i64 0
  %12 = load i32, i32* @FunctionBar_EnterEscKeys, align 4
  %13 = load i32, i32* @FunctionBar_EnterEscEvents, align 4
  %14 = call i32* @FunctionBar_new(i8** %11, i32 %12, i32 %13)
  ret i32* %14
}

declare dso_local i32* @FunctionBar_new(i8**, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
